--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "core-js": "^3.6.5",
+    "longdo-map-vue": "^2.0.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
